--- a/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.scss
+++ b/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.scss
@@ -1,8 +1,8 @@
 .media {
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   padding: 5px;
   margin-bottom: 10px;
-  border-radius: 10px;
+  padding-bottom: 40px;
 }
 span{
   margin-right: 5px;
@@ -22,4 +22,8 @@ span.button.is-small{
   label {
     margin-right: 8px;
   }
+}
+
+img.img-fluid.align-self-start.mr-3 {
+  max-width: 80%;
 }
