--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -24,8 +24,30 @@ li.nav-item.lang {
 }
 
 
+
+.navbar-brand {
+  font-family: 'Fredoka One', cursive;
+}
+
+
+@media (max-width: 400px) {
+
+  .navbar-brand {
+    width: 60px;
+    font-size: 18px;
+    word-break: break-all;
+    height: 50px;
+    white-space: normal;
+    line-height: 20px;
+  }
+
+}
+
+
+
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+
 
 }
 
@@ -34,6 +56,7 @@ li.nav-item.lang {
   .burgerMenu, .visible-mobile {
     display: none;
   }
+
 
 }
 
