--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -7,33 +7,19 @@
       <div class="footer-sitemap-section col-12 col-sm-6 col-md-3 col-lg-3">
         <h4 class="sitemap-title">KATEGORIEN</h4>
         <ul class="sitemap-items-list list-unstyled">
-          <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
-             Computer
+
+
+          <li class="sitemap-item" *ngFor="let category of categories$ | async | slice:0:5">
+            <a class="sitemap-link" tabindex="-1" href="{{this.url +'/produkte/list'}} ">
+              {{category.name}}
             </a>
           </li>
-          <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
-              Fotoapparate
-            </a>
-          </li>
-          <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']" >
-             Gartenzubehör
-            </a>
-          </li>
-          <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
-             Kleider
-            </a>
-          </li>
-          <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
-             Schuhe
-            </a>
-          </li>
+
+
+
         </ul>
       </div>
+
 
 
 
@@ -134,11 +120,11 @@
 
       </div>
 
-       Copyright
+
       <div class="footer-copyright text-center py-3"><span>© All rights reserved. Made with  <fa name="heart" ></fa> by Martin Polak & Bruno Staub</span>
         <a href="#"> mabrweb.com</a>
       </div>
-       Copyright
+
 
     </div>
   </div>
