changed product params processing

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -8,12 +8,12 @@
         <h4 class="sitemap-title">KATEGORIEN</h4>
         <ul class="sitemap-items-list list-unstyled">
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte','list']" [queryParams]="{category:'Fotoapparate'}">
              Computer
             </a>
           </li>
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte']">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['produkte','list']">
               Fotoapparate
             </a>
           </li>
