--- a/src/app/checkout/checkout-shipment/checkout-shipment.component.html
+++ b/src/app/checkout/checkout-shipment/checkout-shipment.component.html
@@ -5,31 +5,30 @@
   <table class="table table-striped checkout">
     <thead>
     <tr>
-      <th></th>
-      <th>Typ</th>
-      <th>Lieferdatum</th>
-      <th>Kosten</th>
+      <th width="20%"></th>
+      <th colspan="2" class="text-right">voraussichtliche Lieferung</th>
+      <th class="text-right">Preis CHF</th>
     </tr>
     </thead>
 
     <tbody>
     <tr>
       <td><input type="radio" value="express" name="shippingMethod" formControlName="shippingMethod"></td>
-      <td>Express Priority</td>
-      <td>Lieferung am 8.12.2018</td>
-      <td>CHF 10.00</td>
+      <td>Schweizer Post</td>
+      <td class="text-right">{{this.postDate | date:'dd.MM.yyyy'}}</td>
+      <td class="text-right">kostenlos</td>
     </tr>
     <tr>
       <td><input type="radio" value="fedex" name="shippingMethod" formControlName="shippingMethod"></td>
-      <td>FedEx</td>
-      <td>Lieferung am 8.12.2018</td>
-      <td>CHF 15.00</td>
+      <td>DHL Express</td>
+      <td class="text-right">{{this.dhlDate | date:'dd.MM.yyyy'}}</td>
+      <td class="text-right">22.00</td>
     </tr>
     <tr>
       <td><input type="radio" value="normal" name="shippingMethod" formControlName="shippingMethod"></td>
-      <td> Normal</td>
-      <td>2-3 Tage</td>
-      <td>CHF 5.00</td>
+      <td>UPS Über-Nacht-Versand</td>
+      <td class="text-right">{{this.upsDate | date:'dd.MM.yyyy'}}</td>
+      <td class="text-right">150.00</td>
     </tr>
     </tbody>
   </table>
