today date fixed in shipping component

--- a/src/app/checkout/checkout-overview/checkout-overview.component.html
+++ b/src/app/checkout/checkout-overview/checkout-overview.component.html
@@ -212,7 +212,7 @@
     <tr>
       <td><input type="radio" value="express" name="shippingMethod" formControlName="shippingMethod"
                  onclick="return false"></td>
-      <td>Schweizer Post</td>
+      <td>Schweizer Post!!!</td>
       <td class="text-right">{{this.postDate | date:'dd.MM.yyyy'}}</td>
       <td class="text-right">kostenlos</td>
     </tr>
