--- a/src/app/product/product-detail/product-detail.component.scss
+++ b/src/app/product/product-detail/product-detail.component.scss
@@ -1,8 +1,12 @@
 @import '../../styles/_shared';
 
-//.btn-mabr-primary {
-//  background-color: $mabr-btn-bg-color;
-//  border-radius: $mabr-btn-border-radius;
-//}
+.tab-content {
+  p{
+    padding-left: 8px;
+    padding-top: 14px;
+    line-height: 2px;
+  }
+}
+
 
 
