--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300i,400,500,500i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One');
 
 @import 'font-awesome';
