bugfix header brand

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark">
 
-  <a class="navbar-brand" [routerLink]="['']">MABRSHOP</a>
+  <a class="navbar-brand" [routerLink]="['']">MABR<span class="brand"><br></span>SHOP</a>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
