--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -13,6 +13,9 @@ nav {
     margin: 6px 0;
   }
 }
+span.brand {
+  display: none;
+}
 
 li.nav-item.lang {
   display: flex;
@@ -47,7 +50,9 @@ li.nav-item.lang {
 
 // Small devices (landscape phones, 576px and up)
 @media (max-width: 576px) {
-
+  span.brand {
+    display: inline-block;
+  }
 
 }
 
