rwd fix oder/checkout

--- a/src/app/checkout/styles/checkout.component.scss
+++ b/src/app/checkout/styles/checkout.component.scss
@@ -201,6 +201,10 @@ h3.checkout-titel {
     margin-top: 0px !important;
   }
 
+  h3.checkout-titel.subtitel {
+    margin-top: 30px!important;
+  }
+
 }
 
 @media screen and (max-width: 800px) {
