--- a/src/app/checkout/checkout-overview/checkout-overview.component.html
+++ b/src/app/checkout/checkout-overview/checkout-overview.component.html
@@ -57,7 +57,7 @@
 </div>
 
 
-<h3 class="checkout-titel">Rechnungsadresse</h3>
+<h3 class="checkout-titel subtitel">Rechnungsadresse</h3>
 
 
 <div>
@@ -139,7 +139,7 @@
 <div *ngIf="!orderData?.shipqingEqualsBillingAddress">
 
 
-  <h3 class="checkout-titel">Lieferadresse</h3>
+  <h3 class="checkout-titel subtitel">Lieferadresse</h3>
 
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
@@ -203,7 +203,7 @@
 
 
 
-<h3 class="checkout-titel">Versandart</h3>
+<h3 class="checkout-titel subtitel">Versandart</h3>
 
 <form [formGroup]="ShipmentForm">
 
@@ -238,7 +238,7 @@
 
 
 
-<h3 class="checkout-titel">Zahlart</h3>
+<h3 class="checkout-titel subtitel">Zahlart</h3>
 
 <form [formGroup]="PaymentForm">
 
