rwd fix oder/checkout

--- a/src/app/checkout/checkout-overview/checkout-overview.component.html
+++ b/src/app/checkout/checkout-overview/checkout-overview.component.html
@@ -214,7 +214,7 @@
                  onclick="return false"></td>
       <td>Schweizer Post!!!</td>
       <td class="text-right">{{this.postDate | date:'dd.MM.yyyy'}}</td>
-      <td class="text-right">kostenlos</td>
+      <td class="text-right">gratis</td>
     </tr>
     <tr>
       <td><input type="radio" value="fedex" name="shippingMethod" formControlName="shippingMethod"
