changed logo font

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700');
-@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
+// @import url('https://fonts.googleapis.com/css?family=Fredoka+One');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:700i');
 
 @import 'font-awesome';
 // @import 'variables';
