--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -29,21 +29,9 @@ li.nav-item.lang {
 
 
 .navbar-brand {
-  font-family: 'Fredoka One', cursive;
-}
-
-
-@media (max-width: 400px) {
-
-  .navbar-brand {
-    width: 60px;
-    font-size: 18px;
-    word-break: break-all;
-    height: 50px;
-    white-space: normal;
-    line-height: 20px;
-  }
-
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 25px;
+  line-height: 27px;
 }
 
 
@@ -52,6 +40,16 @@ li.nav-item.lang {
 @media (max-width: 576px) {
   span.brand {
     display: inline !important;
+  }
+
+  .navbar-brand {
+    width: 60px;
+    font-size: 20px;
+    line-height: 20px;
+    word-break: break-all;
+    height: 50px;
+    white-space: normal;
+    line-height: 20px;
   }
 
 }
