--- a/src/app/core/home/home-slider-ngcarousel/home-slider-ngcarousel.component.html
+++ b/src/app/core/home/home-slider-ngcarousel/home-slider-ngcarousel.component.html
@@ -1,7 +1,10 @@
 <ngb-carousel *ngIf="sliderdata">
   <ng-template *ngFor="let slide of sliderdata" ngbSlide>
     <a href="{{slide.link}}">
-      <img src="{{slide.image}}" width="2560" height="500" alt="{{slide.title}}">
+      <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" width="2560" height="500" alt="{{slide.title}}"
+           style="display: block;
+           background-image: url('assets/slider/slider1_guetzli.jpeg');
+           background-position: -1100px">
       <div class="carousel-caption">
         <h2>{{slide.title}}</h2>
         <p>{{slide.text}}</p>
