--- a/src/app/admin/admin-product-add/admin-product-add.component.html
+++ b/src/app/admin/admin-product-add/admin-product-add.component.html
@@ -1,12 +1,12 @@
 <app-page-title title="Produkt hinzufügen" [children]="[{title: 'Produkt hinzufügen'}]"></app-page-title>
 
 <div class="container">
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm">
     <input type="hidden" id="createdDate" [(ngModel)]="product.createdDate" name="createdDate">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="name" class="col-form-label">Produktname</label>
-        <input type="text" class="form-control" pInputText placeholder="Name" required [(ngModel)]="product.name" name="name" id="name">
+        <input type="text" class="form-control" placeholder="Name" required [(ngModel)]="product.name" name="name" id="name">
       </div>
       <div class="form-group col-md-3">
         <label for="price" class="col-form-label">Preis</label>
@@ -16,7 +16,7 @@
         <label for="kategorie" class="col-form-label">Kategorie</label>
         <div *ngIf="(categories$ | async) as Cat">
           <p-dropdown [options]="Cat" [(ngModel)]="selectedCategory" name="selectedCategory"
-                      placeholder="Wähle eine Kategorie" optionLabel="name" [showClear]="true" filter="true" id="kategorie" required></p-dropdown>
+                      placeholder="Wähle eine Kategorie" optionLabel="name" [showClear]="true" filter="true" id="kategorie" required="true"></p-dropdown>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
     <div class="form-group">
       <p-checkbox binary="true" value="bestRated" label="Beste Bewertung" [(ngModel)]="bestRated" name="bestRated"></p-checkbox>
     </div>
-    <button type="submit" class="btn btn-secondary">Eingabe bestätigen</button>
+    <button type="submit" class="btn btn-secondary" [disabled]="!f.form.valid">Eingabe bestätigen</button>
   </form>
   <a appBackButton class="mt-4 d-block pointer">Zurück zum Dashboard</a>
 </div>
