--- a/src/app/checkout/checkout-shipment/styles/checkout-shipment.component.scss
+++ b/src/app/checkout/checkout-shipment/styles/checkout-shipment.component.scss
@@ -1,1 +1,16 @@
 @import '../../../styles/_shared';
+
+
+@media screen and (max-width: 767px) {
+
+
+  .table th.first, .table td.first {
+    width: 20px;
+  }
+
+  .table thead {
+    display: none;
+  }
+
+}
+
