misc module / agb component

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -59,8 +59,8 @@
         <h4 class="sitemap-title">ZAHLUNG & VERSAND</h4>
         <ul class="sitemap-items-list list-unstyled">
           <li class="sitemap-item">
-            <a class="sitemap-link" tabindex="-1">
-              Ihr Konto
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['misc','agb']">
+              AGB's
             </a>
           </li>
           <li class="sitemap-item">
