--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-page-title title="Benutzer Profil" [children]="[{title: 'Benutzer Profil'}]"></app-page-title>
+<app-page-title title="Ihr Konto" [children]="[{title: 'Benutzer Profil'}]"></app-page-title>
 
 <!--<p><strong>AuthUser: </strong>{{ user | json }}}</p>-->
 <!--<p><strong>LocalStorage: </strong> {{ localStorageUser | json }}}</p>-->
@@ -6,7 +6,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 text-center">
-      <h1>User Profile</h1>
+      <h1>Ihr Konto</h1>
       <br>
       <img class="imgProfil" *ngIf="user" src="{{ user?.downloadUrl }}" alt="">
       <br>
