agb link in new window

--- a/src/app/checkout/checkout-overview/checkout-overview.component.html
+++ b/src/app/checkout/checkout-overview/checkout-overview.component.html
@@ -268,7 +268,7 @@
 
   <div class="row checkout-button">
     <div class="col-12">
-      <input [(ngModel)]="agb_checked" type="checkbox" [ngModelOptions]="{standalone: true}"> Ich habe die <a class="infolink" [routerLink]="['','misc','agb']">AGB's</a> gelesen und akzeptiere diese.
+      <input [(ngModel)]="agb_checked" type="checkbox" [ngModelOptions]="{standalone: true}"> Ich habe die <a class="infolink" [routerLink]="['','misc','agb']" target="_blank">AGB's</a> gelesen und akzeptiere diese.
     </div>
   </div>
 
