last fixes, live deploy

--- a/src/app/core/footer/styles/footer.styles.scss
+++ b/src/app/core/footer/styles/footer.styles.scss
@@ -110,7 +110,7 @@ app-footer {
     }
 
     .footer-sitemap-section.col-12.col-sm-6.col-md-3.col-lg-3.md-bottomrow {
-      margin-top: 30px;
+      // margin-top: 30px;
     }
 
     .main-footer .footer-copyright {
